fix layout issues

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 
 h1 {
 	color: #FFFFFF;
-	font-size: 5vw;
+	font-size: 6.25vw;
 	text-align: center;
 	width: 100%;
 }
@@ -38,11 +38,23 @@ img {
 
 input {
 	display: block;
-	margin: 20px auto;
-	width: 80%;
+	font-size: 120%;
+	margin: 50px auto;
+	width: 95%;
+}
+
+input:focus {
+	outline: 2px solid #FFC107;
+	box-shadow: 0 0 5px rgba(255, 193, 7, 1);
+}
+
+.enter-button:focus {
+	outline: 2px solid #CFD8DC;
+	box-shadow: 0 0 5px rgba(255, 193, 7, 1);
 }
 
 ::placeholder {
+
 	/*check color of placeholder*/
 }
 
@@ -50,12 +62,15 @@ input {
 	background-color: #FFC107;
 	border: 2px solid #FFC107;
 	color: #FFFFFF;
+	cursor: pointer;
 	display: block;
+	font-size: 75%;
+	font-weight: 800;
 	margin: 20px auto;
 	/*padding-right: 20px;
 	padding-left: 20px;*/
 	text-decoration: none;
-	width: 80%;
+	width: 96.75%;
 }
 
 main {
@@ -78,21 +93,21 @@ main {
 article {
 	background-color: #FFFFFF;
 	border: 1px solid #607D8E;
-	margin: 5%;
-	padding: 1% 3%;
+	margin: 20px;
+	padding: 10px 20px;
 	position: relative;
 }
 
 h2 {
 	color: #455A64;
-	font-size: 1.75vw;
+	font-size: 180%;
 }
 
 p {
 	border-bottom: 1px solid #CFD8DC;
 	border-top: 1px solid #CFD8DC;
-	font-size: 1.25vw;
-	padding: 3% 0px;
+	font-size: 140%;
+	padding: 20px 0px;
 
 }
 
@@ -106,7 +121,7 @@ button {
 	background-color: inherit;
 	border: none;
 	color: #607D8E;
-	font-size: 1vw;
+	font-size: 100%;
 	text-decoration: underline #F2F4F4;
 }
 
@@ -115,9 +130,12 @@ button {
 }
 */
 .delete-button {
-	position: absolute;
-	right: 3% ;
 	bottom: 5.5%;
+	right: 3%;
+	padding: 0px;
+	position: absolute;
+	
+		z-index: 0;
 	/*float: right;*/
 }
 
@@ -132,12 +150,25 @@ a:hover {
 
 .read {
 	background-color: #F2F4F4;
+	color: #F05A28;
 }
  /*we will figure out how to change the underline of the link
   and the color of the read between when the article has a class of .read*/
 
  
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 700px) {
+	input {
+		margin: 20px auto;
+	}
+
+	h2 {
+		font-size: 140%;
+	}
+
+	p {
+		font-size: 120%;
+	}
+
 	header {
 		float: none;
 		height: auto;
@@ -157,6 +188,12 @@ a:hover {
 		position: static;
 		padding: 5px;
 	}
+
+/*WHY IS OUR MAIN-CONTENT DIV'S RIGHT-MARGIN -10???*/
+	/*.main-content {
+		margin: 0px auto;
+		margin-right: 10px;
+	}*/
 
 }
 
